fix: change color nav-link for contrast

--- a/assets/style.css
+++ b/assets/style.css
@@ -98,7 +98,7 @@ body {
 .nav-pills .nav-link.active,
 .nav-pills .show > .nav-link {
     color: #fff;
-    background-color: #beb45a;
+    background-color: #8B7D25;
     border-radius: 0;
 }
 .nav-pills .nav-link {
